# pgtp_editor

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  conftest.py  optimized_build.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_output.txt
.claude/: settings.json
.claude/agents/: feature-tester.md  manual-maintainer.md  spec-harmonizer.md  spec-maintainer.md
.claude/hooks/: brainstorm_gate.py
docs/: TEST_LOG.md  installer.iss
docs/superpowers/: CONSOLIDATED_SPEC.md
pgtp_editor/: __init__.py  debuglog.py  main.py
pgtp_editor/analysis/: __init__.py  reused_tables.py
pgtp_editor/db/: __init__.py  compare.py  config.py  introspect.py  rename.py
pgtp_editor/diff/: apply.py  differ.py  records.py  resolve.py
pgtp_editor/generation/: config.py  from_table.py  gap_summary.py  re_runner.py  runner.py  type_map.py
pgtp_editor/model/: encoding.py  event_handlers.py  line_index.py  nodes.py  parser.py
pgtp_editor/resources/: manual.md
pgtp_editor/schema_learning/: merge.py  model.py  parser.py  settings_index.py  storage.py  sync.py  types.py  xsd_gen.py
pgtp_editor/ui/: _stub_action.py  about.py  annotate_popover.py  annotate_schema_values_dialog.py  async_task.py  busy.py  caption_find_replace_dialog.py  caption_management_panel.py  caption_scan.py  center_stage.py  code_editor.py  connection_setup_dialog.py  customize_toolbar_dialog.py  db_check_panel.py  diff_merge_panel.py  event_body.py  find_replace_bar.py  history.py  icons.py  main_window.py  manual_panel.py  merge_conflicts_dialog.py  project_tree.py  properties_panel.py  reused_tables_window.py  schema_viewer.py  schema_viewer_data.py  search.py  table_references_panel.py  team_sync_dialog.py  (+4 more)
tests/: test_build_excludes.py  test_debuglog.py  test_main.py
translator/: CaseStudy_LLM_Python_Toolchain.docx  pgtp_ui_tool.py
(+197 files in other folders)
