[project]
name = "pgtp-editor"
version = "0.1.0"
description = "Companion editor for SQL Maestro PostgreSQL PHP Generator .pgtp project files"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
dependencies = [
    "PySide6>=6.6",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pgtp_editor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
