[project]
name = "pgtp-editor"
version = "0.1.0"
description = "Companion editor for SQL Maestro PostgreSQL PHP Generator .pgtp project files"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
dependencies = [
    "PySide6>=6.6",
    "lxml>=5.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-timeout>=2.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pgtp_editor*"]

[tool.setuptools.package-data]
"pgtp_editor" = ["resources/*.md", "resources/icons/breeze/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
# Hard safety net: any test that reaches an un-patched modal Qt call
# (QDialog.exec / QMessageBox.* / QFileDialog.*) blocks on a modal event loop
# forever. --timeout aborts such a test after 60s with a traceback naming it,
# instead of letting the whole run hang indefinitely. "thread" method is
# required on Windows (the default signal-based method needs SIGALRM, which
# Windows lacks).
addopts = "--timeout=60 --timeout-method=thread"
